--- a/help/release-notes/universal-editor/2025/2025-05-21.md
+++ b/help/release-notes/universal-editor/2025/2025-05-21.md
@@ -3,13 +3,13 @@ title: Note sulla versione 2025.05.21 dell’editor universale
 description: Queste sono le note sulla versione 2025.05.21 dell’editor universale.
 feature: Release Information
 role: Admin
-source-git-commit: f474bdd1086fc7e344c55ac2866b699187f720f1
-workflow-type: tm+mt
+exl-id: 31b003a1-3799-497d-8c80-242365856cf9
+source-git-commit: 33627095d0f57442ef7353f1495364b81d4553e9
+workflow-type: ht
 source-wordcount: '135'
 ht-degree: 100%
 
 ---
-
 
 # Note sulla versione 2025.05.21 dell’editor universale {#release-notes}
 
