Updated by task 'AUTO_TM_MT_1752164980403' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/2c0399f0e53889ef7b9d0d5b01d76d6f3eb62f9f

--- a/help/implementing/cloud-manager/release-notes/2025/2025-6-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-6-0.md
@@ -1,70 +1,75 @@
 ---
-title: Note sulla versione 2025.7.0 di Cloud Manager
-description: Ulteriori informazioni sulla versione 2025.7.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.6.0 di Cloud Manager
+description: Ulteriori informazioni sulla versione 2025.6.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
-source-git-commit: 26fbc60b1348e8c5f42adc8fd0e596b639fe9b44
+source-git-commit: 77b927a4efecffc3442e0cfa0dbca5b81fa30a0b
 workflow-type: tm+mt
-source-wordcount: '920'
-ht-degree: 66%
+source-wordcount: '954'
+ht-degree: 100%
 
 ---
 
-# Note sulla versione 2025.7.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.6.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
 <!-- https://wiki.corp.adobe.com/display/DMSArchitecture/Cloud+Manager+2025.03.0+Release -->
 
-Ulteriori informazioni sulla versione 2025.7.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Ulteriori informazioni sulla versione 2025.6.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La data di pubblicazione della versione 2025.7.0 di Cloud Manager in AEM as a Cloud Service è il venerdì 10 luglio 2025.
+La data di pubblicazione della versione 2025.6.0 di Cloud Manager in AEM as a Cloud Service è il 5 giugno 2025.
 
-La prossima versione è pianificata per il venerdì 7 agosto 2025.
+La prossima versione è pianificata per il 10 luglio 2025.
 
 ## Novità {#what-is-new}
 
-* **Cloud Manager aggiunge il supporto del certificato SSL ECDSA (Elliptic Curve Digital Signature Algorithm)**
+* **La dashboard delle licenze ora include la licenza Edge Delivery Services**
 
-  Cloud Manager ora supporta i certificati ECDSA. Questa funzione garantisce una sicurezza elevata con chiavi di dimensioni più piccole, consentendo ai clienti di applicare la crittografia moderna e leggera alle configurazioni CDN. <!-- https://jira.corp.adobe.com/browse/CMGR-62399 -->
+  L’utilizzo della licenza Edge Delivery Services viene ora visualizzato nella dashboard delle licenze, fornendo una visibilità più chiara dei diritti e dello stato. <!-- CMGR-67686 -->
 
-* **Download del report sull&#39;utilizzo delle licenze del sito**
+  ![Dashboard delle licenze](/help/implementing/cloud-manager/assets/license-dashboard.png)
 
-  Nella pagina **Dettagli sull&#39;utilizzo dei siti** (in Cloud Manager, fare clic su **Licenza**. Nella tabella Soluzioni, nella riga **Sites**, fai clic su **Visualizza dettagli sull&#39;utilizzo**). I clienti possono ora fare clic su **Scarica report** per esportare i dati come file CSV. Questo download semplifica l’analisi e la condivisione delle tendenze di utilizzo. <!-- https://jira.corp.adobe.com/browse/CMGR-42274 -->
+  Consulta [Dashboard delle licenze](/help/implementing/cloud-manager/license-dashboard.md).
 
-  ![Pagina dettagli utilizzo siti](/help/implementing/cloud-manager/release-notes/assets/sites-license-usage-page.png)
+* **Configurazione del sito Edge Delivery aggiornata**
 
-## Programmi di adozione anticipata {#private-beta-program}
+  Il flusso per l’aggiunta di un sito Edge Delivery è stato semplificato richiedendo l’**origine Edge Delivery** invece dell’**URL archivio**, rendendo l’onboarding e la configurazione più veloci e intuitivi <!-- CMGR-67686 -->
 
-Partecipa ai programmi alfa e beta di Cloud Manager per ottenere un accesso esclusivo anticipato alle prossime funzionalità prima del loro rilascio generale.
+  ![Aggiungi finestra di dialogo al sito Edge Delivery](/help/implementing/cloud-manager/release-notes/assets/add-edge-delivery-site.png)
 
-Sono attualmente disponibili le seguenti opportunità:
+  Consulta [Aggiungere un sito Edge Delivery](/help/implementing/cloud-manager/edge-delivery/add-edge-delivery-site.md).
 
+* **Pipeline preferite**
 
-### Rollback con un solo clic per le distribuzioni della pipeline {#one-click-rollback}
+  In questa versione, Cloud Manager introduce la possibilità di fissare le pipeline preferite, consentendoti di contrassegnare specifiche pipeline come preferite in modo che vengano visualizzate nella parte superiore dell’elenco nella pagina **Pipeline**. Questo miglioramento semplifica la ricerca e l’esecuzione delle pipeline a cui si accede di frequente. <!-- CMGR-68293 -->
 
-Ripristino rapido di una distribuzione precedente se il codice più recente non funziona come previsto: non è necessario eseguire nuovamente la pipeline completa o ripristinare manualmente i commit.<!--https://jira.corp.adobe.com/browse/CMGR-69556 -->
+  ![Pipeline contrassegnate come preferite](/help/implementing/cloud-manager/release-notes/assets/pipeline-favorites.png) *Due pipeline contrassegnate come preferite.*
 
-<!-- Add link to topic within the affected article ==>
-
-
-### Specialized Testing Environment {#specialized-test-environment}
-
-Cloud Manager now supports the addition of a new environment type called **Specialized Testing Environment**. The environment is designed to help teams validate features under near-production conditions before going live. This environment type is distinct from *Production + Stage*, *Development*, or *Rapid Development* environments and offers a focused space for running advanced validation scenarios.
-
-Recent enhancement: You can now configure specialized testing environments on a non-production pipeline through a simpler, more intuitive workflow. The streamlined setup speeds completion and reduces configuration errors.
-
-See [Add a Specialized Testing Environment](/help/implementing/cloud-manager/specialized-test-environment.md).
-
-![Add environment dialog box with Specialized Testing Environment radio button selected](/help/implementing/cloud-manager/release-notes/assets/specialized-test-environment.png)
-
-If you are interested in testing this new feature and sharing your feedback, send an email to [grp-earlyadopter_cs_advtestenvironment@adobe.com](mailto:grp-earlyadopter_cs_advtestenvironment@adobe.com) from your email address associated with your Adobe ID.
+  Consulta [Contrassegnare le pipeline come preferite](/help/implementing/cloud-manager/configuring-pipelines/managing-pipelines.md#pipeline-favorites).
 
 
-### Bring Your Own Git (BYOG) - now with support for Azure DevOps {#gitlab-bitbucket-azure-vsts}
+## Programma Beta privato {#private-beta-program}
+
+Partecipa al programma Beta privato di Cloud Manager per ottenere un accesso esclusivo alle prossime funzioni prima della versione generale.
+
+Le seguenti opportunità private Beta sono attualmente disponibili:
+
+
+### Ambiente di test specializzato {#specialized-test-environment}
+
+Cloud Manager ora supporta l’aggiunta di un nuovo tipo di ambiente denominato **Ambiente di test specializzato**. L’ambiente è progettato per aiutare i team a convalidare le funzioni in condizioni prossime alla produzione prima della pubblicazione. Questo tipo di ambiente è diverso dagli ambienti *Produzione + Fase*, *Sviluppo* o *Sviluppo rapido* e offre uno spazio mirato per l’esecuzione di scenari di convalida avanzati.
+
+Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud-manager/specialized-test-environment.md).
+
+![Finestra di dialogo Aggiungi ambiente con il pulsante di scelta Ambiente di test specializzato selezionato](/help/implementing/cloud-manager/release-notes/assets/specialized-test-environment.png)
+
+Se ti interessa testare questa nuova funzione e condividere il tuo feedback, invia un’e-mail a [grp-earlyadopter_cs_advtestenvironment@adobe.com](mailto:grp-earlyadopter_cs_advtestenvironment@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID.
+
+
+### BYOG (Bring Your Own Git): ora con supporto per Azure DevOps {#gitlab-bitbucket-azure-vsts}
 
 <!-- BOTH CS & AMS -->
 
@@ -114,13 +119,8 @@ Se ti interessa testare questa nuova funzione e condividere il tuo feedback, inv
 
 ## Correzioni di bug
 
-* Cloud Manager ora aggiorna la versione di tutte le pipeline durante gli aggiornamenti dell’ambiente, garantendo un tracciamento coerente delle versioni per tutti i tipi di pipeline. <!-- CMGR-69043 -->
-* Ora l’interfaccia utente visualizza messaggi di stato e messaggi di errore dettagliati quando un certificato SSL di convalida del dominio (DV) non riesce, utili per comprendere e risolvere i problemi relativi ai certificati. <!-- CMGR-68872 -->
-* Durante la modifica di una mappatura di dominio, l’interfaccia utente ora impedisce la selezione di certificati SSL che non corrispondono al dominio scelto, riducendo gli errori di configurazione e migliorando l’affidabilità durante la configurazione. <!-- CMGR-64307 -->
-* In alcune situazioni, i certificati non venivano eliminati correttamente, mantenendo il dominio ancora attivo. <!-- CMGR-69867 -->
-* È stato risolto un problema che poteva bloccare gli aggiornamenti da *Adobe Assets* a *Adobe Assets Ultimate* in alcuni casi. Le transizioni sono ora più fluide e affidabili. <!-- CMGR-69506 -->
-* È stato risolto un problema che causava l&#39;impostazione automatica dei campi delle aree chiave durante la creazione di ambienti con più aree al fine di supportare agevolmente servizi e implementazioni a valle. <!-- CMGR-69471 -->
-* È stato risolto un problema che impediva il corretto arresto di alcune pipeline di configurazione dopo l’esecuzione. Ora le pipeline vengono completate correttamente e chiuse come previsto, migliorando l’affidabilità. <!-- CMGR-69344 -->
+* Gli ambienti sandbox precedentemente contrassegnati come `HIBERNATED` non rimangono più bloccati in quello stato, consentendo all’esecuzione o alla distribuzione di pipeline di procedere come previsto. <!-- CMGR-67705 -->
+* AEM Cloud Manager ora mappa correttamente gli errori di build Maven causati da errori 409 (conflitti) durante il recupero degli artefatti del cliente su un errore causato dal cliente. Questa modifica migliora la messaggistica di errore consentendo la distinzione tra errori interni e problemi relativi alla configurazione dell’ambiente del cliente. <!-- CMGR-66673 -->
 
 
 <!-- ## Known issues {#known-issues} -->
