Updated by task 'AUTO_TM_MT_1752250432502' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/2b1b05538b8c86e326d9ce63f25fc250e99173cf

--- a/help/release-notes/maintenance/2025/2025-7-0.md
+++ b/help/release-notes/maintenance/2025/2025-7-0.md
@@ -3,10 +3,11 @@ title: Note sulla versione di manutenzione di  [!DNL Adobe Experience Manager] a
 description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Manager] as a Cloud Service associato all’attivazione delle funzioni 2025.7.0.
 feature: Release Information
 role: Admin
-source-git-commit: afd5fdd43abe7895e8a5ab6f0fa34ce5cf4f9f77
+exl-id: 8f2f9d28-7ca2-41cf-83d3-6a9be5fc3531
+source-git-commit: 06b4aa2cf19ac1f2a76c342915dbee81a31bcbd2
 workflow-type: tm+mt
-source-wordcount: '1795'
-ht-degree: 100%
+source-wordcount: '1808'
+ht-degree: 99%
 
 ---
 
@@ -146,6 +147,7 @@ Con la versione di attivazione funzioni 2025.7.0 verrà fornito il set di funzio
 
 * SITES-33177: gli stili di sezione memorizzati come stringhe separate da virgola sono danneggiati.
 * SITES-33262: per i blocchi senza proprietà nome non viene eseguito il rendering e la pubblicazione non riesce.
+* SITES-33395: pulsante Rollout disabilitato per la sincronizzazione Live Copy di frammenti di contenuto tramite la barra Riferimenti
 
 ### Funzioni e API obsolete {#deprecated-21331}
 
