Updated by task 'AUTO_TM_MT_1753172789669' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/43170fbe8e38ddfeeb29c29304b2326e2a3abb4c

--- a/help/release-notes/maintenance/2025/2025-7-0.md
+++ b/help/release-notes/maintenance/2025/2025-7-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 feature: Release Information
 role: Admin
 exl-id: 8f2f9d28-7ca2-41cf-83d3-6a9be5fc3531
-source-git-commit: 333b840885817fe4736a7d6d6e7da9b9f63827a7
+source-git-commit: c9012f3107ebc63d686877a1a15f4ec8d47d58dc
 workflow-type: tm+mt
-source-wordcount: '2164'
-ht-degree: 97%
+source-wordcount: '2399'
+ht-degree: 93%
 
 ---
 
@@ -15,9 +15,50 @@ ht-degree: 97%
 
 La sezione seguente illustra le note di rilascio tecnico sulla versione di manutenzione di Experience Manager as a Cloud Service associata all’attivazione delle funzioni 2025.7.0.
 
+## Versione 21570 {#21570}
+
+Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21570, rilasciata pubblicamente il mercoledì 15 luglio 2025. La versione di manutenzione precedente era la 21484.
+
+>[!NOTE]
+>
+>Le 21484 sulla versione sono state rese private e sostituite da 21570 sulla versione.
+
+Con la versione di attivazione funzioni 2025.7.0 verrà fornito il set di funzioni completo per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
+
+### Miglioramenti {#enhancements-21570}
+
+* Migrazione ad Apache Httpd 2.4.63.
+
+### Problemi risolti {#fixed-issues-21570}
+
+* SKYOPS-112722: è stato risolto un problema che impediva la risoluzione degli URL personalizzati.
+
+### Problemi noti {#known-issues-21570}
+
+* Il SDK di AEM correlato ha un diverso ID versione (21575) ed è disponibile tramite il portale di distribuzione software.
+* Apache HTTP Server versione 2.4.63 ha introdotto una modifica fondamentale nella gestione dei punti interrogativi (`mod_rewrite`) negli URL da parte di `?`. Questa modifica è stata implementata per impedire l&#39;utilizzo del flag `UnsafeAllow3F`, che è stato considerato un rischio per la sicurezza. Ciò influisce su tutte le direttive `RewriteRule` che si basano sul rilevamento del punto interrogativo nei modelli URL.
+
+### Funzioni e API obsolete {#deprecated-21570}
+
+Le funzioni e le API obsolete e rimosse in AEM as a Cloud Service sono descritte nei dettagli nel documento [Funzioni e API obsolete e rimosse](/help/release-notes/deprecated-removed-features.md).
+
+### Correzioni di sicurezza {#security-21570}
+
+Nessuna.
+
+### Tecnologie incorporate {#embedded-tech-21570}
+
+| Tecnologia | Versione | Collegamento |
+|---|---|---|
+| AEM Oak | 1.80.0 | [API Oak API 1.80.0](https://www.javadoc.io/doc/org.apache.jackrabbit/oak-api/1.80.0/index.html) |
+| API SLING AEM | 2.27.6 | [API Apache Sling 2.27.6 API](https://www.javadoc.io/doc/org.apache.sling/org.apache.sling.api/latest/index.html) |
+| AEM HTL | 1.4.28-1.4.0 | [Specifiche HTML Template Language](https://github.com/adobe/htl-spec) |
+| Server HTTP Apache | 2.4.63 | [Apache Httpd 2.4.63](https://github.com/apache/httpd/blob/2.4.63/CHANGES) |
+| Componenti core AEM | 2.29.0 | [Componenti core WCM AEM](https://github.com/adobe/aem-core-wcm-components) |
+
 ## Versione 21484 {#21484}
 
-Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21484, rilasciata pubblicamente l’venerdì 10 luglio 2025. La versione di manutenzione precedente era la 21331.
+Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21484, rilasciata pubblicamente il 10 luglio 2025. La versione di manutenzione precedente era la 21331.
 
 >[!NOTE]
 >
@@ -196,7 +237,7 @@ Con la versione di attivazione funzioni 2025.7.0 verrà fornito il set di funzio
 
 * SITES-33177: gli stili di sezione memorizzati come stringhe separate da virgola sono danneggiati.
 * SITES-33262: per i blocchi senza proprietà nome non viene eseguito il rendering e la pubblicazione non riesce.
-* SITES-33395: pulsante Rollout disabilitato per la sincronizzazione Live Copy di frammenti di contenuto tramite la barra Riferimenti
+* SITES-33395: pulsante Rollout disabilitato per la sincronizzazione Live Copy di frammenti di contenuto tramite la barra Riferimenti.
 
 ### Funzioni e API obsolete {#deprecated-21331}
 
